# nerf-lab

./: .gitignore  README.md  pyproject.toml
docs/: research-context.md
examples/: demo_batch_camera.ipynb  demo_camera.ipynb  demo_camera2.ipynb  demo_epoch_sampling.ipynb  demo_equations_neglict_color.ipynb  demo_gather_data.ipynb  demo_gather_data_neglict_color.ipynb  demo_sample_rayes.ipynb  demo_save_batch.ipynb  demo_setup_poses.ipynb  demo_setup_poses2.ipynb  demo_setup_poses3.ipynb  demo_setup_poses4.ipynb  demo_train.ipynb  demo_train_prep.ipynb  demo_world copy.ipynb  demo_world.ipynb  demo_world2.ipynb  demo_world3.ipynb  run_first_experiment_load.ipynb  test.ipynb
examples/demo_camera/: demo_batch_camera.ipynb  demo_camera.ipynb  demo_camera2.ipynb
examples/demo_data_io/: demo_load_and_visualize_py.ipynb  demo_save_batch.ipynb  run_first_experiment_load.ipynb
examples/demo_equations/: demo_equations_neglict_color.ipynb
examples/demo_samples/: demo_epoch_sampling.ipynb  demo_sample_rayes.ipynb
examples/demo_setup_poses/: demo_setup_poses.ipynb  demo_setup_poses2.ipynb  demo_setup_poses3.ipynb  demo_setup_poses4.ipynb
experiments/: test_depth_map.ipynb  test_evaluate_unknown_poses.ipynb  test_predict_sigma.ipynb  test_reveal_depth_map.ipynb  test_reveal_depth_map_known_poses.ipynb  test_sigma.ipynb  test_sigma2.ipynb
nerflab/: __init__.py  camera.py  config.py  geometry.py  presets.py  render.py  sampling.py  utils.py
presentation/: Muhammed Elyamani - NERF SLAM - progress1.pptx
report/: EE656_NeRF_SLAM_IEEE_Final_Report.tex
(+61 files in other folders)
