[project]
name = "nerflab"
version = "0.1.0"
description = "Tiny helpers for NeRF / ray‑marching experiments"
authors = [{name = "Muhammed Elyamani"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "matplotlib>=3.8",
    "typing-extensions; python_version<'3.11'",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
